<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Phone Explorer</string>
    <string name="search_type">Search type </string>
    <string name="search_hint">Search here ...</string>
    <string name="onCloseToast">Bye Bye !!! Floating Icon always with you,\nDouble click on it.</string>
    <string name="Sound_off">Turn Off Sound</string>
    <string name="Sound_on">Turn On Sound</string>
    <string name="sound">Open/Close Sound</string>
    <string name="optionmenusound">Touch Sounds</string>
    <string name="floatingIcon">Floating Icon</string>
    <string name="floatingIconreboot">Floating Icon on reboot</string>
    <string name="showHidden">Show Hidden Files</string>
    <string name="backgroundcolor">Background color</string>
    <string name="helptoast">You can skip this help guide by pressing back twice, but it is recommended to complete 10 page guide for best use.</string>

    <!-- Dialog video/auido -->
    <string name="action_play">Play</string>
    <string name="action_share">Share Via</string>
    <string name="action_rename">Rename</string>
    <string name="action_detail">Detail</string>
    <string name="action_delete">Delete</string>
    <string name="action_file_location">Details</string>

    <!-- Application -->
    <string name="item_open">Open</string>
    <string name="item_share">Share Via</string>
    <string name="item_backup">BackUp/Extract</string>
    <string name="item_move_sdcard">Move to SdCard</string>
    <string name="item_notification">On/Off Notification</string>
    <string name="item_uninstall">Uninstall</string>
    <string name="item_search_play">Search in Play Store</string>
    <string name="not_installed_error_msg">App is not installed</string>

    <!-- Menu Options -->
    <string name="action_refresh">Refresh</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_sort_by">Sort</string>
    <string name="action_about_us">About Us</string>
    <string name="action_help">Help</string>
    <string name="action_promo_video">Promo Video</string>

    <!-- Help Text -->
    <string name="help_text">Click this checkbox\nTo turn On/Off Notification.</string>
    <string name="uninstall_help_text">Click this button to Uninstall.</string>
    <string name="sdcard_help_text">Click this button to Move App on SDCARD.</string>

    <!-- About Us Page -->
    <string name="about_us_title">Nad Innovation</string>
    <string name="about_us_text">We are a group of friends where we develop basic utility application which we found useful for us and believe that they will be of great use to others.</string>

    <string-array name="appName">
        <item> Phone Explorer </item>
        <item> Share Apps</item>
        <item> App Manager</item>
        <item> 4 Pics 1 Word Answers</item>
        <item> Notification Hider </item>
    </string-array>
    <string-array name="appIcon">
        <item>@drawable/phoneexplorer</item>
        <item>@drawable/shareapp</item>
        <item> @drawable/appmanager</item>
        <item>@drawable/fourpicsoonewords</item>
        <item>@drawable/notificationhider</item>
    </string-array>
    <string-array name="drawerListIcon">
        <item>@drawable/contact</item>
        <item>@drawable/images</item>
        <item>@drawable/audio</item>
        <item>@drawable/video</item>
        <item>@drawable/documents</item>
        <item>@drawable/application</item>
        <item>@drawable/download</item>
        <item>@drawable/screenshot</item>
        <item>@drawable/camera</item>
        <item>@drawable/all</item>
        <!-- <item>@drawable/websearch</item> -->
    </string-array>
    <string-array name="appdescription">
        <item>Search Apps/Contacts/Music/Video in easy way, with advance features, have floating icon.</item>
        <item>Share Apps with your friends, No need to download again-again.</item>
        <item>Manage Multiple apps in single click.</item>
        <item>Get 100% correct answer for Pics Puzzel.</item>
        <item>Hide Whatsapp,Facebook,Hike etc social networking apps notification in just 1 click.</item>
    </string-array>

    <!-- Ads IDs -->
    <string name="Interstitial_ad_ad_unit_id">ca-app-pub-3975452735536251/2438273121</string>
    <string name="banner_in_apps_ad_unit_id">ca-app-pub-3975452735536251/7008073523</string>
    <string name="banner_in_other_then_apps_ad_unit_id">ca-app-pub-3975452735536251/8484806723</string>
    <string name="title_activity_setting">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first_fragment">FirstFragment</string>

    <string-array name="content_array">
        <item>Contacts</item>
        <item>Images</item>
        <item>Audio</item>
        <item>Videos</item>
        <item>Documents</item>
        <item>Application</item>
        <item>Downloads</item>
        <item>Screenshots</item>
        <item>Camera</item>
        <item>All Files</item>
        <!-- <item>Web Search</item> -->
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- SORT BY Dialog -->
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="sheader_order">ORDER</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>

</resources>