<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/addcontact"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add_contact"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    <!--
         <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"/>
    -->
    <item
        android:id="@+id/action_sort_by"
        android:orderInCategory="100"
        android:title="@string/action_sort_by"/>
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/action_about_us"/>
    <item
        android:id="@+id/action_rate_us"
        android:orderInCategory="100"
        android:title="@string/action_rate_us"/>
    <item
        android:id="@+id/action_promo_video"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_promo_video"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>