<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.app_share.UninstallActivity" >

<!--     <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"/> -->
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/action_about_us"/>
    <item
        android:id="@+id/action_rate_us"
        android:orderInCategory="100"
        android:title="@string/action_rate_us"/>
    <item
        android:id="@+id/action_promo_video"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_promo_video"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>